Bug 1128397: Work around EOS detection in MSE. r=mattwoodrow

This attempts to handle video and audio sourcebuffer not having exactly the
same duration, so the ended event is properly fired.